dodane icone pri work

--- a/src/content/work/ofis2024.md
+++ b/src/content/work/ofis2024.md
@@ -11,3 +11,4 @@ During my tenure at OFIS arhitekti d.o.o., I was responsible for adapting public
   - Utilized Autocad graphical tool for plan adjustments
   - Coordinated adjustments for publication in Detail magazine (https://detail.de/)
 
+[<img src="https://ofis.si/favicon.ico" alt="provido" style="height:80px">](https://ofis.si/)
