--- a/src/content/work/ofis2021.md
+++ b/src/content/work/ofis2021.md
@@ -8,3 +8,4 @@ dateEnd: "07/31/2021"
 In July 2021, I participated in a student volunteer program at OFIS arhitekti d.o.o. as a graphic design intern. During this period, I focused on learning and applying various graphic design tools, including Archicad, Autocad, and Sketchup.
 
 - Learned and utilized graphic design tools such as Archicad, Autocad, Sketchup
+[<img src="https://ofis.si/favicon.ico" alt="provido" style="height:80px">](https://ofis.si/)
