--- a/src/content/journey/ski2024.md
+++ b/src/content/journey/ski2024.md
@@ -7,3 +7,5 @@ dateEnd: "01/31/2024"
 
 In January 2024, I worked as a ski instructor at SK Bled, where I focused on teaching skiing to preschool children.
 - Instructed skiing lessons for preschool children
+
+[<img src="https://sk-bled.si/wp-content/uploads/2023/10/skbled_logo_h_head.png" alt="tineslabe.com" style="width:200px">](https://sk-bled.si/)
